--- a/estilos.css
+++ b/estilos.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   font-size: 16px;
   font-family: Titillium Web,Helvetica, sans-serif;
+  background-color: rgb(85, 155, 213);
 }
 
 h1 {
@@ -10,6 +11,7 @@ h1 {
 }
 .container {
   margin: 30px auto;
+  background-color: white;
   width: 400px;
   border: 1px solid black;
   border-radius: 5px;
@@ -35,15 +37,20 @@ h1 {
   padding: 5px;
   word-wrap: break-word;
   width: 100%;
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid black;
 }
 
-.chat-slide:last-child{
-  border-bottom: none;
+.chat-slide-top {
+    margin-right: 5px;
+    display: inline-block;
+}
+
+.myUser {
+    color: orangered;
 }
 
 .submit {
-  color: grey;
+  color: dimgrey;
   cursor: pointer;
 
 }
@@ -64,10 +71,4 @@ h1 {
   color: grey;
   left: 40%;
   top: 40%;
-}
-
-.text {
-  margin: 10px auto;
-  width: 400px;
-  border: 1px solid black;
 }
